[package]
name = "rust-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.13.0"
actix-web = "^4.0.0"
actix-web-actors = "^4.0.0"
actix-cors = "^0.6.0"
awc = "^3.0.0"
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

env_logger = "^0.9.0"
futures-util = { version = "^0.3.0", features = ["sink"] }
log = "^0.4.0"
tokio = { version = "^1.20.0", features = ["full"] }
tokio-stream = "^0.1.0"
serde_json = "^1.0.0"
redis = { version = "0.24.0", features = ["tokio-comp"] }
